Enable paginator on collectionList Component